<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".LoginActivity">


<TextView
android:id="@+id/tvTitleLogin"
style="@style/ChristmasText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_login"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />


<EditText
android:id="@+id/etEmailLogin"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:hint="@string/hint_email"
android:inputType="textEmailAddress"
android:autofillHints="emailAddress"
android:minHeight="48dp"
android:layout_marginTop="16dp"
app:layout_constraintTop_toBottomOf="@id/tvTitleLogin"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintWidth_percent="0.8" />


<EditText
android:id="@+id/etPasswordLogin"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:hint="@string/hint_password"
android:inputType="textPassword"
android:autofillHints="password"
android:minHeight="48dp"
android:layout_marginTop="16dp"
app:layout_constraintTop_toBottomOf="@id/etEmailLogin"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintWidth_percent="0.8" />


<Button
android:id="@+id/btnLogin"
style="@style/ChristmasButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/button_login"
    android:layout_marginTop="24dp"
    app:layout_constraintTop_toBottomOf="@id/etPasswordLogin"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="0.8" />


<TextView
android:id="@+id/tvForgotPassword"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/forgot_password"
android:textSize="14sp"
android:textColor="@color/christmas_green"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/btnLogin"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivChristmasTree"
        android:layout_width="237dp"
        android:layout_height="374dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/christmas_tree_description"
        android:src="@drawable/arbolitonavidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
