<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".CreateExchangeActivity">


    <TextView
        android:id="@+id/tvTitleCreateExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create_exchange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:textColor="@color/christmas_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/etExchangeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exchange_name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:minHeight="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleCreateExchange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <EditText
        android:id="@+id/etDeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_deadline"
        android:inputType="date"
        android:autofillHints="date"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etExchangeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <EditText
        android:id="@+id/etMaxAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_max_amount"
        android:inputType="numberDecimal"
        android:autofillHints="paymentAmount"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etDeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <Button
        android:id="@+id/btnConfirmExchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm_exchange"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/christmas_red"
        android:textColor="@color/christmas_white"
        app:layout_constraintTop_toBottomOf="@id/etMaxAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
