<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nievemuneco"
    tools:context=".MainActivity">

    <!-- Mensaje de Bienvenida -->
<TextView
android:id="@+id/tvWelcome"
style="@style/ChristmasText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_message"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />


<Button
android:id="@+id/btnCreateExchange"
style="@style/ChristmasButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/create_exchange_button"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toBottomOf="@id/tvWelcome"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="0.8" />


<Button
android:id="@+id/btnViewExchanges"
style="@style/ChristmasButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/view_exchanges_button"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/btnCreateExchange"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
